--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#">Services</a>
                     </li>
                     <li class="nav-item">
@@ -61,7 +58,7 @@
                 </div>
             </div>
         </section>
-        <section id="carousel">
+        <section id="carousel" class="pb-5 border-bottom">
             <div class="container">
                 <div id="carouselExampleIndicators" class="carousel slide">
                   <div class="carousel-indicators">
@@ -95,8 +92,43 @@
                   </button>
                 </div>
               </div>
-
-        </section>
+         </section>
+         <section id="services" class="mt-2">
+          <div class="container py-5">
+            <div class="row gy-3 ">
+              <div class="col-12 text-center">
+                <h1>Services</h1>
+              </div>
+              <div class="col-md-4">
+                <div class="card h-100" >
+                  <img src="images/orange-stage.png" class="card-img-top" alt="stage" style="height:15rem;">
+                  <div class="card-body">
+                    <h2 class="card-text">Stage Decorations</h2>
+                    <p class="card-text">Wedding stage decorations, birthday stage decorations and other event decorations.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card h-100">
+                  <img src="images/orange-light.png" class="card-img-top" alt="lightings" style="height:15rem;">
+                  <div class="card-body">
+                    <h2 class="card-text">Light Decorations</h2>
+                    <p class="card-text">Beautiful light decorations.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="card h-100">
+                  <img src="images/ornage-dance.jpg" class="card-img-top" alt="dance" style="height:15rem;">
+                  <div class="card-body">
+                    <h2 class="card-text">Dance and Music</h2>
+                    <p class="card-text">Choreographed welcome dance and music performance.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+         </div>
+         </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>    
 </body>
 </html>
