--- a/index.html
+++ b/index.html
@@ -92,43 +92,126 @@
                   </button>
                 </div>
               </div>
-         </section>
-         <section id="services" class="mt-2">
-          <div class="container py-5">
-            <div class="row gy-3 ">
-              <div class="col-12 text-center">
-                <h1>Services</h1>
-              </div>
-              <div class="col-md-4">
-                <div class="card h-100" >
-                  <img src="images/orange-stage.png" class="card-img-top" alt="stage" style="height:15rem;">
-                  <div class="card-body">
-                    <h2 class="card-text">Stage Decorations</h2>
-                    <p class="card-text">Wedding stage decorations, birthday stage decorations and other event decorations.</p>
+        </section>
+        <section id="services" class="mt-2">
+            <div class="container py-5">
+              <div class="row gy-3 ">
+                <div class="col-12 text-center">
+                  <h1>Services</h1>
+                </div>
+                <div class="col-md-4">
+                  <div class="card h-100" >
+                    <img src="images/orange-stage.png" class="card-img-top" alt="stage" style="height:15rem;">
+                    <div class="card-body">
+                      <h2 class="card-text">Stage Decorations</h2>
+                      <p class="card-text">Wedding stage decorations, birthday stage decorations and other event decorations.</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card h-100">
-                  <img src="images/orange-light.png" class="card-img-top" alt="lightings" style="height:15rem;">
-                  <div class="card-body">
-                    <h2 class="card-text">Light Decorations</h2>
-                    <p class="card-text">Beautiful light decorations.</p>
+                <div class="col-md-4">
+                  <div class="card h-100">
+                    <img src="images/orange-light.png" class="card-img-top" alt="lightings" style="height:15rem;">
+                    <div class="card-body">
+                      <h2 class="card-text">Light Decorations</h2>
+                      <p class="card-text">Beautiful light decorations.</p>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card h-100">
-                  <img src="images/ornage-dance.jpg" class="card-img-top" alt="dance" style="height:15rem;">
-                  <div class="card-body">
-                    <h2 class="card-text">Dance and Music</h2>
-                    <p class="card-text">Choreographed welcome dance and music performance.</p>
+                <div class="col-md-4">
+                  <div class="card h-100">
+                    <img src="images/ornage-dance.jpg" class="card-img-top" alt="dance" style="height:15rem;">
+                    <div class="card-body">
+                      <h2 class="card-text">Dance and Music</h2>
+                      <p class="card-text">Choreographed welcome dance and music performance.</p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-         </div>
-         </section>
+        </section>
+        <section id="gallery">
+          <div class="container-fluid pb-3" style="background-color:black;">
+            <h1 style="color:white;" class="text-center py-3">Image Gallery</h1>
+            <div class="row gallery gy-3">
+              <div class="col-md-3">
+                <img src="images/os1.jpg" alt="Image 1">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os2.jpg" alt="Image 2">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os3.jpg" alt="Image 3">
+              </div>
+              <div class="col-md-3">
+                <img src="images/ol1.jpg" alt="Image 4">
+              </div>
+              <div class="col-md-3">
+                <img src="images/ob1.jpg" alt="Image 5">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os9.jpg" alt="Image 6">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os4.jpg" alt="Image 7">
+              </div>
+              <div class="col-md-3">
+                <img src="images/ob2.jpg" alt="Image 8">
+              </div>
+              <div class="col-md-3">
+                <img src="images/ol3.jpg" alt="Image 9">
+              </div>
+              <div class="col-md-3">
+                <img src="images/ol2.jpg" alt="Image 10">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os5.jpg" alt="Image 11">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os7.jpg" alt="Image 12">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os6.jpg" alt="Image 13">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os8.jpg" alt="Image 14">
+              </div>
+              <div class="col-md-3">
+                <img src="images/ol4.jpg" alt="Image 15">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os10.jpg" alt="Image 16">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os11.jpg" alt="Image 17">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os12.jpg" alt="Image 18">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os14.jpg" alt="Image 19">
+              </div>
+              <div class="col-md-3">
+                <img src="images/ol4.jpg" alt="Image 20">
+              </div>
+              <div class="col-md-3">
+                <img src="images/ob3.jpg" alt="Image 21">
+              </div>
+              <div class="col-md-3">
+                <img src="images/ot1.jpg" alt="Image 22">
+              </div>
+              <div class="col-md-3">
+                <img src="images/ol5.jpg" alt="Image 23">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os15.jpg" alt="Image 24">
+              </div>
+              <div class="col-md-3">
+                <img src="images/os16.jpg" alt="Image 25">
+              </div>
+            </div>
+          </div>
+          
+        </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>    
 </body>
 </html>
